correct alignment of CSS class 'fname' and activate forwardSearch for menu acl
git-svn-id: file:///opt/w5base-svn-repo/HEAD@9663 0dab0bae-74ca-4a1c-8b4a-1454ec714b61

--- a/skin/default/base/css/kernel.App.Web.css
+++ b/skin/default/base/css/kernel.App.Web.css
@@ -70,6 +70,7 @@ td.fname{
    padding-left:4px;
    padding-right:5px;
    font-weight:bold;
+   vertical-align:top;
 }
 td.finput{
    border-style:solid;
